@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Sep 05, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Sep 08, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -18,7 +18,7 @@
                 <entry key= "38" value="data/jbrowse2/Human/hg38" />
                 <entry key= "17" value="data/jbrowse2/Human/hg19" />
                 <entry key= "13" value="data/jbrowse2/Human/hg18" />
-<!--
+
                 <entry key="911" value="data/jbrowse2/Pig/susScr11" />
                 <entry key="910" value="data/jbrowse2/Pig/susScr3" />
 
@@ -29,7 +29,13 @@
                 <entry key="1311" value="data/jbrowse2/Green Monkey/chlSab2" />
 
                 <entry key="1410" value="data/jbrowse2/Naked Mole-Rat/hetGla2" />
-                -->
+
+                <entry key="44" value="data/jbrowse2/Chinchilla/chiLan1" />
+
+                <entry key="720" value="data/jbrowse2/Squirrel/speTri2" />
+
+                <entry key="511" value="data/jbrowse2/Bonobo/panPan2" />
+                <entry key="513" value="data/jbrowse2/Bonobo/panPan3" />
             </map>
         </property>
     </bean>
@@ -66,6 +72,13 @@
                 <value>1311</value>  <!-- Green Monkey/chlSab2 -->
 
                 <value>1410</value>  <!-- Naked Mole-Rat/hetGla2 -->
+
+                <value>44</value>  <!-- Chinchilla/chiLan1 -->
+
+                <value>720</value>  <!-- Squirrel/speTri2 -->
+
+                <value>511</value>  <!-- Bonobo/panPan2 -->
+                <value>513</value>  <!-- Bonobo/panPan3 -->
             </list>
         </property>
         <property name="termTrackNames">
@@ -163,41 +176,14 @@
                 <value>1311</value>  <!-- Green Monkey/chlSab2 -->
 
                 <value>1410</value>  <!-- Naked Mole-Rat/hetGla2 -->
-            </list>
-        </property>
-        <!--
-        <property name="processedAssemblies">
-            <list>
-                <value>species:BONOBO     mapKey:511  toDir:data/Gene/Bonobo/     compress:bgzip</value>
-                <value>species:BONOBO     mapKey:513  toDir:data/Gene/Bonobo/     compress:bgzip</value>
-                <value>species:CHINCHILLA mapKey:44   toDir:data/Gene/Chinchilla/ compress:bgzip</value>
-                <value>species:SQUIRREL   mapKey:720  toDir:data/Gene/Squirrel/   compress:bgzip</value>
-            </list>
-        </property>
-        -->
-    </bean>
 
-    <bean id="ensemblManager" class="edu.mcw.rgd.gff3.CreateGff4Ensembl">
-        <property name="outDir" value="Gene Models/Ensembl Gene Features"/>
-        <property name="mappings">
-            <map>
-                <entry key="Rattus_norvegicus.mRatBN7.2.110-feature.gff3.gz" value="Ensembl (mRatBN7.2.110) Features.gff3.gz"/>
-                <entry key="Rattus_norvegicus.mRatBN7.2.110-model.gff3.gz" value="Ensembl (mRatBN7.2.110) Model.gff3.gz"/>
-                <entry key="Mus_musculus.GRCm39.110-feature.gff3.gz" value="Ensembl (GRCm39.110) Features.gff3.gz"/>
-                <entry key="Mus_musculus.GRCm39.110-model.gff3.gz" value="Ensembl (GRCm39.110) Model.gff3.gz"/>
-                <entry key="Homo_sapiens.GRCh38.110-feature.gff3.gz" value="Ensembl (GRCh38.110) Features.gff3.gz"/>
-                <entry key="Homo_sapiens.GRCh38.110-model.gff3.gz" value="Ensembl (GRCh38.110) Model.gff3.gz"/>
-            </map>
-        </property>
-        <property name="mappings2">
-            <map>
-                <entry key="Rattus_norvegicus.mRatBN7.2.110-feature.gff3.gz" value="372"/>
-                <entry key="Rattus_norvegicus.mRatBN7.2.110-model.gff3.gz" value="372"/>
-                <entry key="Mus_musculus.GRCm39.110-feature.gff3.gz" value="239"/>
-                <entry key="Mus_musculus.GRCm39.110-model.gff3.gz" value="239"/>
-                <entry key="Homo_sapiens.GRCh38.110-feature.gff3.gz" value="38"/>
-                <entry key="Homo_sapiens.GRCh38.110-model.gff3.gz" value="38"/>
-            </map>
+                <value>44</value>  <!-- Chinchilla/chiLan1 -->
+
+                <value>720</value>  <!-- Squirrel/speTri2 -->
+
+                <value>511</value>  <!-- Bonobo/panPan2 -->
+                <value>513</value>  <!-- Bonobo/panPan3 -->
+            </list>
         </property>
     </bean>
 
@@ -273,18 +259,23 @@
                 <value>911</value>  <!-- Pig/susScr11 -->
                 <value>910</value>  <!-- Pig/susScr3 -->
 
+                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
                 <value>631</value>  <!-- Dog/canFam3 -->
+
+                <value>1313</value>  <!-- Green Monkey/veroWho -->
+                <value>1311</value>  <!-- Green Monkey/chlSab2 -->
+
+                <value>1410</value>  <!-- Naked Mole-Rat/hetGla2 -->
+
+                <value>44</value>  <!-- Chinchilla/chiLan1 -->
+
+                <value>720</value>  <!-- Squirrel/speTri2 -->
+
+                <value>511</value>  <!-- Bonobo/panPan2 -->
+                <value>513</value>  <!-- Bonobo/panPan3 -->
+
             </list>
         </property>
-<!--        <property name="processedAssemblies">
-            <list>
-                <value>species:BONOBO     mapKey:511  toDir:data/ProteinDomain/ compress:bgzip</value>
-                <value>species:CHINCHILLA mapKey:44   toDir:data/ProteinDomain/ compress:bgzip</value>
-                <value>species:MOLERAT    mapKey:1410 toDir:data/ProteinDomain/ compress:bgzip</value>
-                <value>species:SQUIRREL   mapKey:720  toDir:data/ProteinDomain/ compress:bgzip</value>
-                <value>species:VERVET     mapKey:1311 toDir:data/ProteinDomain/ compress:bgzip</value>
-            </list>
-        </property>-->
     </bean>
 
     <bean id="evaManager" class="edu.mcw.rgd.gff3.CreateGff4Eva">
@@ -302,6 +293,29 @@
             </list>
         </property>
     </bean>
+
+    <bean id="jbrowse2PrepEva" class="edu.mcw.rgd.gff3.JBrowse2PrepEva">
+        <property name="outDir" value="Variants/European Variation Archive"/><!-- JBrowse2 category -->
+        <property name="outPrefix" value="EVA Release 4"/>
+        <property name="srcFiles">
+            <map>
+                <entry key="372" value="data/Eva/EVA_mRatBN7.2.gff3.gz"></entry>
+                <entry key="360" value="data/Eva/EVA_Rnor_6.0.gff3.gz"></entry>
+                <entry key="70"  value="data/Eva/EVA_Rnor_5.0.gff3.gz"></entry>
+
+                <entry key="239" value="data/Eva/EVA_GRCm39.gff3.gz"></entry>
+                <entry key="35"  value="data/Eva/EVA_GRCm38.gff3.gz"></entry>
+
+                <entry key="911"  value="data/Eva/EVA_Sscrofa11.1.gff3.gz"></entry>
+
+                <entry key="631"  value="data/Eva/EVA_CanFam3.1.gff3.gz"></entry>
+
+                <entry key="1311"  value="data/Eva/EVA_ChlSab1.1.gff3.gz"></entry>
+            </map>
+        </property>
+    </bean>
+
+
     <bean id="ensemblPrep" class="edu.mcw.rgd.gff3.EnsemblPrep">
         <property name="outDir" value="data/Ensembl/"/>
         <property name="ensemblGff">
@@ -312,9 +326,63 @@
                 <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.110.gff3.gz"></entry>
                 <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.110.gff3.gz"></entry>
                 <entry key="638" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.110.gff3.gz"></entry>
+                <entry key="45"  value="ftp://ftp.ensembl.org/pub/current_gff3/chinchilla_lanigera/Chinchilla_lanigera.ChiLan1.0.110.gff3.gz"></entry>
+                <entry key="1312" value="ftp://ftp.ensembl.org/pub/release-110/gff3/chlorocebus_sabaeus/Chlorocebus_sabaeus.ChlSab1.1.110.chr.gff3.gz"></entry>
+                <entry key="1411" value="ftp://ftp.ensembl.org/pub/current_gff3/heterocephalus_glaber_female/Heterocephalus_glaber_female.Naked_mole-rat_maternal.110.gff3.gz"></entry>
             </map>
         </property>
     </bean>
+
+    <bean id="ensemblManager" class="edu.mcw.rgd.gff3.CreateGff4Ensembl">
+        <property name="outDir" value="Gene Models/Ensembl Gene Features"/>
+        <property name="mappings">
+            <map>
+                <entry key="Rattus_norvegicus.mRatBN7.2.110-feature.gff3.gz" value="Ensembl (mRatBN7.2.110) Features.gff3.gz"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.110-model.gff3.gz" value="Ensembl (mRatBN7.2.110) Model.gff3.gz"/>
+                <entry key="Mus_musculus.GRCm39.110-feature.gff3.gz" value="Ensembl (GRCm39.110) Features.gff3.gz"/>
+                <entry key="Mus_musculus.GRCm39.110-model.gff3.gz" value="Ensembl (GRCm39.110) Model.gff3.gz"/>
+                <entry key="Homo_sapiens.GRCh38.110-feature.gff3.gz" value="Ensembl (GRCh38.110) Features.gff3.gz"/>
+                <entry key="Homo_sapiens.GRCh38.110-model.gff3.gz" value="Ensembl (GRCh38.110) Model.gff3.gz"/>
+
+                <entry key="Sus_scrofa.Sscrofa11.1.110-feature.gff3.gz" value="Ensembl (Sscrofa11.1.110) Features.gff3.gz"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.110.110-model.gff3.gz" value="Ensembl (Sscrofa11.1.110) Model.gff3.gz"/>
+                <entry key="Pan_paniscus.panpan1.1.110-feature.gff3.gz" value="Ensembl (panpan1.1.110) Features.gff3.gz"/>
+                <entry key="Pan_paniscus.panpan1.1.110-model.gff3.gz" value="Ensembl (panpan1.1.110) Model.gff3.gz"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.110-feature.gff3.gz" value="Ensembl (ROS_Cfam_1.0.110) Features.gff3.gz"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.110-model.gff3.gz" value="Ensembl (ROS_Cfam_1.0.110) Model.gff3.gz"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.110-feature.gff3.gz" value="Ensembl (ChiLan1.0.110) Features.gff3.gz"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.110-model.gff3.gz" value="Ensembl (ChiLan1.0.110) Model.gff3.gz"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.110-feature.gff3.gz" value="Ensembl (ChlSab1.1.110) Features.gff3.gz"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.110-model.gff3.gz" value="Ensembl (ChlSab1.1.110) Model.gff3.gz"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.110-feature.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.110) Features.gff3.gz"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.110-model.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.110) Model.gff3.gz"/>
+            </map>
+        </property>
+        <property name="mappings2">
+            <map>
+                <entry key="Rattus_norvegicus.mRatBN7.2.110-feature.gff3.gz" value="372"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.110-model.gff3.gz" value="372"/>
+                <entry key="Mus_musculus.GRCm39.110-feature.gff3.gz" value="239"/>
+                <entry key="Mus_musculus.GRCm39.110-model.gff3.gz" value="239"/>
+                <entry key="Homo_sapiens.GRCh38.110-feature.gff3.gz" value="38"/>
+                <entry key="Homo_sapiens.GRCh38.110-model.gff3.gz" value="38"/>
+
+                <entry key="Sus_scrofa.Sscrofa11.1.110-feature.gff3.gz" value="911"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.110.110-model.gff3.gz" value="911"/>
+                <entry key="Pan_paniscus.panpan1.1.110-feature.gff3.gz" value="511"/>
+                <entry key="Pan_paniscus.panpan1.1.110-model.gff3.gz" value="511"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.110-feature.gff3.gz" value="634"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.110-model.gff3.gz" value="634"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.110-feature.gff3.gz" value="44"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.110-model.gff3.gz" value="44"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.110-feature.gff3.gz" value="1311"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.110-model.gff3.gz" value="1311"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.110-feature.gff3.gz" value="1410"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.110-model.gff3.gz" value="1410"/>
+            </map>
+        </property>
+    </bean>
+
 
     <bean id="variantManager" class="edu.mcw.rgd.gff3.CreateGff4Variants">
         <property name="oldOutDirPrefix" value="data/jbrowse2/"/>
@@ -332,21 +400,6 @@
                 <entry key="360" value="data/strain_specific_variants/rat6"/>
                 <entry key="70" value="data/strain_specific_variants/rat5"/>
                 <entry key="60" value="data/strain_specific_variants/rat3_4"/>
-            </map>
-        </property>
-    </bean>
-
-    <bean id="jbrowse2PrepEva" class="edu.mcw.rgd.gff3.JBrowse2PrepEva">
-        <property name="outDir" value="Variants/European Variation Archive"/><!-- JBrowse2 category -->
-        <property name="outPrefix" value="EVA Release 4"/>
-        <property name="srcFiles">
-            <map>
-                <entry key="372" value="data/Eva/EVA_mRatBN7.2.gff3.gz"></entry>
-                <entry key="360" value="data/Eva/EVA_Rnor_6.0.gff3.gz"></entry>
-                <entry key="70"  value="data/Eva/EVA_Rnor_5.0.gff3.gz"></entry>
-
-                <entry key="239" value="data/Eva/EVA_GRCm39.gff3.gz"></entry>
-                <entry key="35"  value="data/Eva/EVA_GRCm38.gff3.gz"></entry>
             </map>
         </property>
     </bean>
